appId: dev.podium.sample
---
- launchApp:
    clearState: true
- tapOn:
    id: "username"
- inputText: "podium"
- hideKeyboard
- tapOn:
    id: "password"
- inputText: "pass"
- hideKeyboard
- tapOn:
    id: "login_button"
- assertVisible: "Welcome"
