appId: dev.podium.sample
---
- launchApp:
    clearState: true
- tapOn:
    id: "username"
- inputText: "podium"
- hideKeyboard
- tapOn:
    id: "password"
- inputText: "pass"
- hideKeyboard
- tapOn:
    id: "login_button"
- assertVisible: "Welcome"
- scrollUntilVisible:
    element: "Item 50"
- tapOn: "Item 50"
- assertVisible: "Reached end"
